--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,4 @@ build/
 
 
 ### Sensitive Data ###
-!**/src/main/resources/application.properties
-
+clinicalTrials/src/main/resources/application.properties
