Add logic for Add and Update Trial

--- a/clinicalTrials-frontend/angular.json
+++ b/clinicalTrials-frontend/angular.json
@@ -73,6 +73,10 @@
             },
             "development": {
               "browserTarget": "clinicalTrials-frontend:build:development"
+            },
+            "options": {
+              "browserTarget": "clinicalTrials-frontend:build",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
