--- a/clinicalTrials/pom.xml
+++ b/clinicalTrials/pom.xml
@@ -45,6 +45,11 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 	<build>
